--- a/mais-apoio/src/pages/HomePage/_home.module.css
+++ b/mais-apoio/src/pages/HomePage/_home.module.css
@@ -1,6 +1,6 @@
 .corpo{
     width: 100vw;
-    height: 100vh;
+    height: 99vh;
 }
 
 .conteudo{
@@ -29,6 +29,7 @@
     width: 90%;
     height: auto;
     object-fit: cover;
+    margin: 3rem 0 ;
 }
 
 .botoesConteudo{
@@ -37,6 +38,7 @@
     justify-content: center;
     flex-direction: row;
     width: 90%;
+    margin: 0 0 3rem 0;
     gap: 3rem;
 }
 
@@ -126,6 +128,7 @@
     flex-direction: row;
     width: 80%;
     height: auto;
+    margin: 2rem 0 0 0;
 }
 
 .text{
