--- a/mais-apoio/src/Componentes/Botao/_botao.module.css
+++ b/mais-apoio/src/Componentes/Botao/_botao.module.css
@@ -96,11 +96,79 @@
     transition: 0.3s;
 }
 
-.logoHome{
+.logoHome {
     background-color: #ffffff00;
     border: none;
     margin: 0;
     cursor: pointer;
+}
+
+.setaEsquerda {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    left: 20px;
+    user-select: none;
+}
+
+.setaDireita {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    right: 20px;
+    user-select: none;
+}
+
+.cadastrarAjudado {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: #007BFF 1px solid;
+    border-radius: 7px;
+    width: 70%;
+    height: 4rem;
+    background-color: #007BFF;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.cadastrarAjudado:hover {
+    color: #007BFF;
+    border: #007BFF 1px solid;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.3s;
+}
+
+.imagemCadastro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem 2rem;
+    background-color: #ffffff00;
+    width: 100%;
+    border: solid 2px #007BFF;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.imagemCadastro:hover{
+    transform: scale(1.02);
+    transition: 0.4s;
 }
 
 @font-face {
