--- a/mais-apoio/src/Componentes/Botao/_botao.module.css
+++ b/mais-apoio/src/Componentes/Botao/_botao.module.css
@@ -171,6 +171,27 @@
     transition: 0.4s;
 }
 
+.cadastrarConfirma {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: #007BFF 1px solid;
+    border-radius: 7px;
+    width: 60%;
+    height: 4rem;
+    background-color: #007BFF;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+.cadastrarConfirma:hover {
+    color: #007BFF;
+    border: #007BFF 1px solid;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.3s;
+}
+
 @font-face {
     font-family: 'Poppins';
     src: url('../../Fontes/Poppins/Poppins-Bold.ttf') format('woff2');
