--- a/mais-apoio/src/Componentes/Botao/_botao.module.css
+++ b/mais-apoio/src/Componentes/Botao/_botao.module.css
@@ -153,7 +153,7 @@
     transition: 0.3s;
 }
 
-.imagemCadastro{
+.imagemCadastro {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,7 +166,7 @@
     transition: 0.4s;
 }
 
-.imagemCadastro:hover{
+.imagemCadastro:hover {
     transform: scale(1.02);
     transition: 0.4s;
 }
@@ -186,6 +186,74 @@
 }
 
 .cadastrarConfirma:hover {
+    color: #007BFF;
+    border: #007BFF 1px solid;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.3s;
+}
+
+.inputCadastro {
+    all: unset;
+    border: #007BFF solid;
+    font-size: 0.9rem;
+    border-width: 0 0 2px 0;
+    padding: 5px;
+    width: 100%;
+    height: 1rem;
+    cursor: pointer;
+    overflow-y: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.inputCadastro::-webkit-scrollbar {
+    height: 3px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.inputCadastro::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #9fa2a8;
+}
+
+.boxAjuda {
+    all: unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border: #007BFF solid 2px;
+    width: 100%;
+    border-radius: 7px;
+    height: 13rem;
+    cursor: pointer;
+}
+
+.bolinhaLogin {
+    all: unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+.confirmarLogin {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: #007BFF 1px solid;
+    border-radius: 70px;
+    width: 100%;
+    height: 3.2rem;
+    background-color: #007BFF;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+.confirmarLogin:hover {
     color: #007BFF;
     border: #007BFF 1px solid;
     background-color: rgba(255, 255, 255, 0);
