--- a/mais-apoio/src/pages/HomePage/_home.module.css
+++ b/mais-apoio/src/pages/HomePage/_home.module.css
@@ -297,17 +297,6 @@
     margin: 2rem 0 0 0;
 }
 
-.boxAjuda {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    border: #007BFF solid 2px;
-    width: 100%;
-    border-radius: 7px;
-    height: 13rem;
-}
-
 .imagemAjuda {
     width: 8.5rem;
 }
@@ -415,11 +404,11 @@
 
 .conteudoCadastroUsuario {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: row;
     width: 100%;
     height: 100%;
+    margin: 2% 0;
 }
 
 .cadastroUsuario {
@@ -428,11 +417,10 @@
     justify-content: space-between;
     flex-direction: row;
     width: 70%;
-    height: 91%;
+    height: 33rem;
     border: #007BFF 2px solid;
     border-radius: 15px;
     overflow: hidden;
-    padding: 0;
 }
 
 .formsCadastro {
@@ -440,11 +428,11 @@
     height: 100%;
 }
 
-.formularioCadastro{
+.formularioCadastro {
     margin: 0 0 0 4rem;
 }
 
-.cadastroForms{
+.cadastroForms {
     font-family: 'Poppins';
     font-size: 4rem;
     color: #007BFF;
@@ -456,7 +444,7 @@
     height: 105%;
 }
 
-.cadaInput{
+.cadaInput {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -467,20 +455,20 @@
 
 }
 
-.labelCadastro{
+.labelCadastro {
     color: #007BFF;
     font-size: 1.2rem;
     display: flex;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
 }
 
 .inputCadastro {
-    all: unset; 
+    all: unset;
     border: #007BFF solid;
     font-size: 0.9rem;
     border-width: 0 0 2px 0;
-    padding: 5px ;
+    padding: 5px;
     width: 100%;
 }
 
@@ -490,6 +478,251 @@
     padding: 0;
     margin: 0;
     font-style: normal;
+}
+
+.inputEndereco {
+    position: relative;
+}
+
+.boxEndereco {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    top: 76%;
+    left: 5.85%;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 1000;
+    width: 48%;
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
+    margin: 0;
+    border-radius: 0px 0px 30px 30px;
+    border: #007BFF 1px solid;
+}
+
+.maiorBoxEndereco{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    padding: 0;
+    gap: 0.5rem;
+}
+
+.iconeBoxEndereco{
+    min-width: 1rem;
+    max-width: 1rem;
+    font-size: 1rem;
+    color:#007BFF
+}
+
+.inputMaiorBoxEndereco{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    border-color: #007BFF;
+    border-width: 0 0 2px 0;
+    border-style: solid;
+}
+
+.inputBoxEndereco{
+    all: unset;
+    font-size: 0.8rem;
+    padding: 0.3rem 0.4rem;
+    width: 100%;
+}
+
+.iconeMenorBoxEndereco{
+    min-width: 1rem;
+    font-size: 1rem;
+    color:#007BFF
+}
+
+.escuro{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top:0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 0;
+
+}
+
+.escuro::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.escuro::-webkit-scrollbar-thumb {
+    background-color: #007BFF;
+    border-radius: 10px;
+}
+
+.boxLogin{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 25%;
+    height: auto;
+    background-color: #ffffff;
+    padding: 1rem 0;
+    border-radius: 10px;
+    margin: 5rem;
+}
+
+.x{
+    position: absolute;
+    top: 1.5%;
+    right: 2%;
+    font-size: 1.5rem;
+    color: #007BFF;
+}
+
+.boxMenorLogin{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 80%;
+    height: 100%;
+    gap: 1rem;
+}
+
+.painel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.logoPainel{
+    width: 5.6rem;
+}
+
+.tituloPainel{
+    font-family: 'Poppins';
+    font-size: 1.3rem;
+    color: #007BFF;
+}
+
+.textoPainel{
+    text-align: center;
+    font-family: 'PoppinsSimples';
+    font-size: 0.8rem;
+    color: #000000;
+}
+
+.botoesPainel{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    gap: 1rem;
+}
+
+.botaoPainel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.bolalogin1, .bolalogin2, .bolalogin3, .bolalogin4{
+all: unset;
+width: 0.5rem;
+height: 0.5rem;
+border-radius: 90px;
+border: #007BFF 1px solid;
+margin: 0;
+padding: 0;
+}
+
+.descricaoLogin{
+    font-family: 'PoppinsSimples';
+    font-size: 0.8rem;
+    color: #000000;
+    margin: 0.5rem 0;
+    text-align: center;
+}
+
+.inputsLogin{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    gap: 0.8rem;
+}
+
+.inputLogin{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+}
+
+.inputL{
+    all: unset;
+    border: #007BFF solid;
+    font-size: 0.9rem;
+    border-width: 0 0 2px 0;
+    padding: 5px;
+    width: 100%;
+}
+
+.iconeLogin{
+    color: #007BFF;
+    font-size: 1.3rem;
+    padding: 0;
+    margin: 0;
+    font-style: normal;
+    min-width: 1.3rem;
+}
+
+.esqueceuLogin{
+    margin: 0.5rem 0 0 0;
+    font-family: 'PoppinsSimples';
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    font-size: 0.6rem;
+    color: #4b4b4b;
+    width: 100%;
+}
+
+.cadastrarLogin{
+    font-family: 'PoppinsSimples';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.6rem;
+    color: #000000;
+    width: 100%;
+    height: auto;
+    padding: 0;
+
+}
+
+.cadastroLogin{
+    color: #007BFF;
+    margin-left: 5px;
+
 }
 
 @font-face {
