--- a/mais-apoio/src/Componentes/Botao/_botao.module.css
+++ b/mais-apoio/src/Componentes/Botao/_botao.module.css
@@ -204,6 +204,7 @@
     overflow-y: hidden;
     overflow-x: auto;
     white-space: nowrap;
+    color: #757575;
 }
 
 .inputCadastro::-webkit-scrollbar {
