--- a/mais-apoio/src/Componentes/Botao/_botao.module.css
+++ b/mais-apoio/src/Componentes/Botao/_botao.module.css
@@ -139,7 +139,7 @@
     color: #ffffff;
     border: #007BFF 1px solid;
     border-radius: 7px;
-    width: 70%;
+    width: 100%;
     height: 4rem;
     background-color: #007BFF;
     transition: 0.3s;
@@ -227,7 +227,7 @@
     border: #007BFF solid 2px;
     width: 100%;
     border-radius: 7px;
-    height: 13rem;
+    height: 100%;
     cursor: pointer;
 }
 
