--- a/mais-apoio/src/Componentes/TopBar/_topBar.module.css
+++ b/mais-apoio/src/Componentes/TopBar/_topBar.module.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .topBar{
     display: flex;
     align-items: center;
@@ -31,7 +30,8 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-=======
+}
+
 .topBar{
     display: flex;
     align-items: center;
