--- a/mais-apoio/src/pages/CadastroBeneficiarioPage/_cadastroBeneficiario.module.css
+++ b/mais-apoio/src/pages/CadastroBeneficiarioPage/_cadastroBeneficiario.module.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .conteudoCadastro {
     display: flex;
@@ -7,6 +7,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: aqua;
     
 }
 
@@ -15,6 +16,7 @@
     font-size: 3.8rem;
     color: #007BFF;
     padding: 1rem 0 2rem 0;
+    background-color: aqua;
 }
 
 .boxsCadastro {
@@ -24,41 +26,61 @@
     flex-direction: row;
     gap: 3rem;
     width: 80%;
+    background-color: aqua;
+    
+
 }
 
 .imagemCadastro {
-    width: 100%;
+    width: 10%;
     height: auto;
-}
+    background-color: aqua;
+} */
 
 .conteudoCadastroUsuario {
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    margin: 2% 0;
+    height: auto;
+    padding: 0;
 }
 
 .cadastroUsuario {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-direction: row;
     width: 70%;
-    height: auto;
     border: #007BFF 2px solid;
     border-radius: 15px;
     overflow: hidden;
+    margin: 2rem;
+    padding: 2rem 0;
 }
 
 .formsCadastro {
+    position: relative;
     width: 100%;
-    height: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    z-index: 2;
+}
+
+.fotoCadastro {
+    position: absolute;
+    right: -3%;
+    top: -3%;
+    height: 106%;
+    z-index: 1;
+    width: auto; 
+    margin: 0;
 }
 
 .formularioCadastro {
     margin: 0 0 0 4rem;
+    padding: 0px;
 }
 
 .cadastroForms {
@@ -69,9 +91,7 @@
     padding: auto 0;
 }
 
-.fotoCadastro {
-    height: 105%;
-}
+
 
 .cadaInput {
     display: flex;
@@ -81,7 +101,6 @@
     gap: 0.5rem;
     padding: 0 0 0.6rem 0;
     width: 60%;
-
 }
 
 .labelCadastro {
@@ -176,6 +195,7 @@
     font-size: 1rem;
     color:#007BFF
 }
+
 
 @font-face {
     font-family: 'Poppins';
