--- a/mais-apoio/src/pages/CadastroEmpresaPage/_cadastroEmpresa.module.css
+++ b/mais-apoio/src/pages/CadastroEmpresaPage/_cadastroEmpresa.module.css
@@ -1,64 +1,48 @@
 
-
-.conteudoCadastro {
-    display: flex;
-    align-items: center;
-    justify-content: first baseline;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    
-}
-
-.tituloCadastro {
-    font-family: 'Poppins';
-    font-size: 3.8rem;
-    color: #007BFF;
-    padding: 1rem 0 2rem 0;
-}
-
-.boxsCadastro {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    gap: 3rem;
-    width: 80%;
-}
-
-.imagemCadastro {
-    width: 100%;
-    height: auto;
-}
-
 .conteudoCadastroUsuario {
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    margin: 2% 0;
+    height: auto;
+    padding: 0;
 }
 
 .cadastroUsuario {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-direction: row;
     width: 70%;
-    height: auto;
     border: #007BFF 2px solid;
     border-radius: 15px;
     overflow: hidden;
+    margin: 2rem;
+    padding: 2rem 0;
 }
 
 .formsCadastro {
+    position: relative;
     width: 100%;
-    height: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    z-index: 2;
+}
+
+.fotoCadastro {
+    position: absolute;
+    right: -3%;
+    top: -3%;
+    height: 106%;
+    z-index: 1;
+    width: auto; 
+    margin: 0;
 }
 
 .formularioCadastro {
     margin: 0 0 0 4rem;
+    padding: 0px;
 }
 
 .cadastroForms {
@@ -69,9 +53,6 @@
     padding: auto 0;
 }
 
-.fotoCadastro {
-    height: 105%;
-}
 
 .cadaInput {
     display: flex;
