--- a/mais-apoio/src/pages/HomePage/_home.module.css
+++ b/mais-apoio/src/pages/HomePage/_home.module.css
@@ -4,6 +4,7 @@
 }
 
 .conteudo {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -12,7 +13,6 @@
     height: calc(100% - 8.5rem);
     overflow-x: hidden;
     overflow-y: auto;
-
 }
 
 .conteudo::-webkit-scrollbar {
@@ -272,6 +272,15 @@ cursor: pointer;
 
 .bolaEscura{
     background-color: #c6c6c9;
+}
+
+.link{
+    all: unset;
+    border-radius: 70px;
+    width: 100%;
+    height: 3.2rem;
+    cursor: pointer;
+    margin-top: 1rem;
 }
 
 
