--- a/mais-apoio/src/Componentes/SideBar/_sideBar.module.css
+++ b/mais-apoio/src/Componentes/SideBar/_sideBar.module.css
@@ -1,22 +1,28 @@
-.SideBar {
+.sideBar{
     position: relative;
-    display: flex;
-    justify-content: first baseline;
-    flex-direction: column;
     width: 23%;
     height: 100%;
     border: 2px solid #007BFF;
     z-index: 1;
+}
+
+.conteudo {
+    position: relative;
+    display: flex;
+    justify-content: first baseline;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
-.SideBar::-webkit-scrollbar {
+.conteudo::-webkit-scrollbar {
     width: 2px;
     background-color: rgba(255, 255, 255, 0);
 }
 
-.SideBar::-webkit-scrollbar-thumb {
+.conteudo::-webkit-scrollbar-thumb {
     background-color: #007BFF;
 }
 
@@ -24,9 +30,13 @@
     all: unset;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
+    justify-content: first baseline;
+    width: auto;
     gap: 0.5rem;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    z-index: 2;
 }
 
 .sair{
@@ -34,13 +44,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
     bottom: 2rem;
     left: 2rem;
+    width: auto;
     font-size: 1.2rem;
-    color: black;
+    color: #000;
     cursor: pointer;
     background-color: rgba(255, 255, 255,0.5);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 1);
     border-radius: 7px;
 }
 
