--- a/mais-apoio/src/pages/ConteudoAreaParaAjudar/_conteudoAreaParaAjudar.module.css
+++ b/mais-apoio/src/pages/ConteudoAreaParaAjudar/_conteudoAreaParaAjudar.module.css
@@ -5,95 +5,13 @@
     flex-direction: column;
     width: 100%;
     margin: 2rem 0 0 0;
-}
-
-.imagens {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    overflow: hidden;
+    padding: 0rem 3rem;
 }
 
 .imagensCarrosel {
     width: 100%;
     height: auto;
-    transition: transform 0.5s ease;
     object-fit: cover;
-}
-
-.bolas {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    width: 100%;
-    height: 2rem;
-    gap: 0.5rem
-}
-
-.bola {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 1rem;
-    height: 1rem;
-}
-
-.bola1 {
-    all: unset;
-    display: inline-block;
-    cursor: pointer;
-    background-color: #c6c6c9;
-    width: 0.4rem;
-    height: 0.4rem;
-    border-radius: 100px;
-    border: none;
-}
-
-.bola2 {
-    all: unset;
-    display: inline-block;
-    cursor: pointer;
-    background-color: #c6c6c9;
-    width: 0.4rem;
-    height: 0.4rem;
-    border-radius: 50%;
-}
-
-.bola3 {
-    all: unset;
-    display: inline-block;
-    cursor: pointer;
-    background-color: #c6c6c9;
-    width: 0.4rem;
-    height: 0.4rem;
-    border-radius: 50%;
-}
-
-.bola1:hover {
-    transform: scale(1.3);
-    background-color: #616161;
-}
-
-.bola2:hover {
-    transform: scale(1.3);
-    background-color: #616161;
-}
-
-.bola3:hover {
-    transform: scale(1.3);
-    background-color: #616161;
-}
-
-.escuro {
-    transform: scale(1.3);
-    background-color: #616161;
-}
-
-.claro {
-    background-color: #c6c6c9;
 }
 
 .linkAjuda {
