--- a/mais-apoio/src/pages/HomePage/_home.module.css
+++ b/mais-apoio/src/pages/HomePage/_home.module.css
@@ -58,6 +58,7 @@
     justify-content: center;
     flex-direction: column;
     width: 25%;
+    min-width: 300px;
     height: auto;
     background-color: #ffffff;
     padding: 1rem 0;
@@ -109,11 +110,10 @@
 
 .botoesPainel{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: row;
     width: 100%;
-    gap: 1rem;
+    gap: 6%;
 }
 
 .botaoPainel{
