--- a/mais-apoio/src/Componentes/Botao/_botao.module.css
+++ b/mais-apoio/src/Componentes/Botao/_botao.module.css
@@ -196,6 +196,27 @@
     transition: 0.3s;
 }
 
+.editarConfirma {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: #007BFF 1px solid;
+    border-radius: 13px;
+    width: 100%;
+    height: 4rem;
+    background-color: #007BFF;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-top: 1.7rem;
+}
+
+.editarConfirma:hover {
+    color: #007BFF;
+    border: #007BFF 1px solid;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.3s;
+}
+
 .imagemCadastro {
     display: flex;
     justify-content: center;
@@ -297,6 +318,27 @@
 }
 
 .confirmarLogin:hover {
+    color: #007BFF;
+    border: #007BFF 1px solid;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.3s;
+}
+
+.confirmarLoginEntrar {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: #007BFF 1px solid;
+    border-radius: 70px;
+    width: 100%;
+    height: 3.2rem;
+    background-color: #007BFF;
+    transition: 0.3s;
+    cursor: pointer;
+    margin: 1rem 0;
+}
+
+.confirmarLoginEntrar:hover {
     color: #007BFF;
     border: #007BFF 1px solid;
     background-color: rgba(255, 255, 255, 0);
