--- a/mais-apoio/src/Componentes/Perfil/_perfil.module.css
+++ b/mais-apoio/src/Componentes/Perfil/_perfil.module.css
@@ -66,6 +66,35 @@
     transition: 0.3s;
 }
 
+.botaoImagemPermanente {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    flex-direction: column;
+    transition: 0.3s;
+    color: rgba(255, 255, 255,1) ;
+    gap: 1rem;
+    font-family: 'Poppins';
+    font-size: 1.1rem;
+    border-radius: 50%;
+
+    .cameraPermanente {
+        font-size: 3rem;
+    }
+}
+
+.botaoImagemPermanente:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #007BFF ;
+    transition: 0.3s;
+}
+
 .nome {
     font-family: 'PoppinsSemiBold';
     font-size: 1.7rem;
