--- a/mais-apoio/src/Componentes/TopBarLog/_topBarLog.module.css
+++ b/mais-apoio/src/Componentes/TopBarLog/_topBarLog.module.css
@@ -17,11 +17,15 @@
 }
 
 .linkLogo{
+    position: relative;
     text-decoration: none;
     margin-left: 3%;
+    z-index: 10;
 }
 
 .link{
+    position: relative;
+    z-index: 10;
     all: unset;
     text-decoration: none;
 }
