--- a/mais-apoio/src/Componentes/Botao/_botao.module.css
+++ b/mais-apoio/src/Componentes/Botao/_botao.module.css
@@ -392,6 +392,31 @@
     transition: 0.3s;
 }
 
+.doarConfirma{
+    all: unset;
+    background-color: #007BFF;
+    text-align: center;
+    width: auto;
+    height: auto;
+    font-family: 'PoppinsSimples';
+    margin: 0;
+    padding: 0.3rem 0.7rem;
+    color: #ffffff;
+    border-radius: 13px;
+    font-size: 0.8rem;
+    transition: 0.3s;
+    border: #007BFF 2px solid;
+    cursor: pointer;
+    margin-top: 1.5rem;
+}
+
+.doarConfirma:hover{
+    background-color: #ffffff;
+    color: #007BFF;
+    border: #007BFF 2px solid;
+    transition: 0.3s;
+}
+
 @font-face {
     font-family: 'Poppins';
     src: url('../../Fontes/Poppins/Poppins-Bold.ttf') format('woff2');
