--- a/mais-apoio/src/pages/ConsultaGeralBeneficiario/_consultaGeralBeneficiario.module.css
+++ b/mais-apoio/src/pages/ConsultaGeralBeneficiario/_consultaGeralBeneficiario.module.css
@@ -61,6 +61,11 @@
     font-family: 'PoppinsSimples';
 }
 
+.casoNao{
+    font-family: 'PoppinsSimples';
+    font-size: 1rem;
+}
+
 .imagem{
     width: 8rem;
     height: 8rem;
@@ -71,4 +76,23 @@
     max-width: 100%;
     max-height: 100%;
     box-sizing: border-box; 
+}
+
+.texto_add{
+    margin: 0;
+    font-family: 'PoppinsSimples';
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../../Fontes/Poppins/Poppins-Bold.ttf') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PoppinsSimples';
+    src: url('../../Fontes/Poppins/Poppins-Regular.ttf') format('woff2');
+    font-weight: 400;
+    font-style: normal;
 }
